# squirrel-starter-project

./: CMakeLists.txt
Plugins/Script.Squirrel/: CMakeLists.txt  ScriptFile.cpp  ScriptFile.h  ScriptLoader.cpp  ScriptLoader.h  _Plugin.cpp  _Plugin.h
Plugins/Script.Squirrel/Bindings/: NodeSq.h  SceneSq.h  Vector3Sq.h
Plugins/Script.Squirrel/ScriptUtils/: script_binder.h
Source/Application/: CMakeLists.txt  SampleGameScreen.cpp  SampleGameScreen.h  SampleProject.cpp
Source/Editor/: Editor.cpp
